src/main/java/egovframework/example/admin/sidebar/member/error/exception/MemberExcelOutputException.java
package egovframework.example.admin.sidebar.member.error.exception;

public class MemberExcelOutputException extends RuntimeException{

}
